--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="title_activity_maps">MapsActivity</string>
     <string name="maps">Maps</string>
     <string name="retry">Coba lagi</string>
+    <string name="location">Location</string>
 </resources>
